<resources>
    <string name="app_name">AI Senior Engineer</string>
</resources>
